refatorado codigo do javafx, atualização de dependencias (ver pom.xml), criação de db.properties para configurar banco de dados local, atualização de readme